--- a/index.ipynb
+++ b/index.ipynb
@@ -42,15 +42,19 @@
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
     "            return self.__class__(None, None, self.a, self.b)\n",
-    "\n",
+    " \n",
     "        # Case 2: self.x != other.x\n",
+    "        if self.x != other.x:\n",
     "        # Formula (x3,y3)==(x1,y1)+(x2,y2)\n",
     "        # s=(y2-y1)/(x2-x1)\n",
+    "            s = (other.y - self.y) / (other.x - self.x)\n",
     "        # x3=s**2-x1-x2\n",
+    "            x = s**2 - self.x - other.x\n",
     "        # y3=s*(x1-x3)-y1\n",
+    "            y = s*(self.x-x) - self.y\n",
     "        # Remember to return an instance of this class:\n",
     "        # self.__class__(x, y, a, b)\n",
-    "        pass"
+    "            return self.__class__(x, y, self.a, self.b)"
    ]
   }
  ],
